# cyberpunkd

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
include/: file_utils.hpp  ocr.hpp  prng.hpp  puzzler.hpp  usage.hpp  utils.hpp
include/core/: notifier.hpp  ocr.hpp  puzzler.hpp  usage.hpp  watcher.hpp
include/game/: goal.hpp  point.hpp  puzzler.hpp  route.hpp  state.hpp
include/gui/: about.hpp  config_bar.hpp  gui.hpp  menubar.hpp  misc.hpp  state.hpp  utils.hpp
include/utils/: config.hpp  file_utils.hpp  json.hpp  prng.hpp  string_utils.hpp  uuid.hpp
src/: file_utils.cpp  main.cpp  ocr.cpp  puzzler.cpp  string_utils.cpp
src/core/: notifier.cpp  ocr.cpp  puzzler.cpp  watcher.cpp
src/game/: goal.cpp  point.cpp  puzzler.cpp  route.cpp  state.cpp
src/gui/: about.cpp  config_bar.cpp  demo.cpp  gui.cpp  menubar.cpp
src/utils/: config.cpp  file_utils.cpp  string_utils.cpp  uuid.cpp
test/: CMakeLists.txt  sample_image.hpp  tests.cpp
